Fix a bug of summary page taking up extra space

--- a/public/stylesheets/tabs.css
+++ b/public/stylesheets/tabs.css
@@ -168,7 +168,7 @@ input.eq-1d-y:checked + label {
     height: 90%;
     top: 5rem;
     position: absolute;
-    visibility: hidden;
+    display: none;
     overflow-x: hidden;
     z-index: 99;
     background-color: var(--bg-color);
